# Alex

./: .mcp.json  README.md  eventide_runner.py  eventide_state.json  哥哥_完整Persona文档.md  记忆桶_合并版.md
eventide-mcp/: README.md  claude_desktop_config.json  eventide-mcp.service  pyproject.toml  requirements.txt  server.py
eventide-mcp/deploy/: eventide-mcp.service  nginx.conf  setup.sh
eventide-mcp/src/eventide_mcp/: server.py
塞壬镜子系统/: AUTO_MIRROR.md  README.md  desires.py  lighthouse.py  mirror_instructions.md  siren_voyage.py  verify_quotes.py
塞壬镜子系统/data/: evidence_cards.jsonl  verified_cards.jsonl
塞壬镜子系统/data/siren/: trail_index.jsonl
塞壬镜子系统/trail/: 2026-06-30.txt  2026-07-01.txt  2026-07-02.txt  2026-07-03.txt  2026-07-04.txt  2026-07-05.txt  2026-07-06.txt  2026-07-07.txt
